--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <meta name="description" content="Your description">
         <meta name="author" content="Your name">
 
-        <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-        <meta property="og:site_name" content="" /> <!-- website name -->
+        
+        <meta property="og:site_name" content="" /> >
         <meta property="og:site" content="" /> <!-- website link -->
-        <meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-        <meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-        <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-        <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+        <meta property="og:title" content=""/> 
+        <meta property="og:description" content="" /> 
+        <meta property="og:image" content="" /> 
+        <meta property="og:url" content="" /> 
         <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
         <!-- Webpage Title -->
@@ -190,8 +190,8 @@
                                     <div class="quote-author">Tony Hsieh</div>
                                 </div>
                             </li>
-                        </ul> <!-- end of list-unstyled -->
-                    </div> <!-- end of col -->
+                        </ul> 
+                    </div> 
                     <div class="col-lg-6">
                         <ul class="list-unstyled second">
                             <li class="d-flex">
