--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Your name">
 
         
-        <meta property="og:site_name" content="" /> >
+        <meta property="og:site_name" content="" /> 
         <meta property="og:site" content="" /> <!-- website link -->
         <meta property="og:title" content=""/> 
         <meta property="og:description" content="" /> 
