--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
         
         <meta property="og:site_name" content="" /> 
-        <meta property="og:site" content="" /> <!-- website link -->
+        <meta property="og:site" content="" />
         <meta property="og:title" content=""/> 
         <meta property="og:description" content="" /> 
         <meta property="og:image" content="" /> 
         <meta property="og:url" content="" /> 
-        <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
+        <meta name="twitter:card" content="summary_large_image"> 
 
         <!-- Webpage Title -->
         <title>Junel Maglunsod Portfolio</title>
