--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <!-- Card -->
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title"><img src="C:\Users\Glendale\OneDrive\Desktop\Along\porto\web\images\MSU-IIT-Icon.png" alt="MSU IIT Logo" width="20px" height="20px">Mindanao State University - Iligan Institute of Technology</div> 
+                                <div class="card-title"><img src="..images/MSU-IIT-Icon.png" alt="MSU IIT Logo" width="20px" height="20px">Mindanao State University - Iligan Institute of Technology</div> 
                                 <div class="card-text">The Mindanao State University – Iligan Institute of Technology, commonly referred to as, is a public coeducational institution of higher learning and research university located in Iligan City, Philippines, charted in 1968 by Republic Act 5363 and integrated as the first autonomous unit of the Mindanao State University System in 1975.</div>
                             </div>
                         </div> <!-- end of card -->
@@ -106,7 +106,7 @@
                         <!-- Card -->
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title"><img src="C:\Users\Glendale\OneDrive\Desktop\Along\porto\web\images\NEMSU-Icon.png" alt="MSU IIT Logo" width="20px" height="20px">North East Mindanao State Universtiy - Lianga Campus</div> 
+                                <div class="card-title"><img src="..images/NEMSU-Icon.png" alt="MSU IIT Logo" width="20px" height="20px">North East Mindanao State Universtiy - Lianga Campus</div> 
                                 <div class="card-text">NEMSU-Lianga is the Campus that specialized in Fisheries and Marine Sciences. In September 2009, it was identified by CHED as the National University/College of Fisheries (NUCAF) in CARAGA Region under the National Agriculture/Fisheries Education System (NAFES) project with a grant of P1M per year in 5 years. The campus has a notable Research Culture especially in Coastal Resource Management. It has experts in Corals, Seaweeds, Seagrass, Fin Fishes, Holothurias and Mangroves.</div>
                             </div>
                         </div> <!-- end of card -->
