--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
         
         <meta property="og:site_name" content="" /> 
-        <meta property="og:site" content="" />
+        <meta property="og:site" content="" /> <!-- website link -->
         <meta property="og:title" content=""/> 
         <meta property="og:description" content="" /> 
         <meta property="og:image" content="" /> 
         <meta property="og:url" content="" /> 
-        <meta name="twitter:card" content="summary_large_image"> 
+        <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
         <!-- Webpage Title -->
         <title>Junel Maglunsod Portfolio</title>
@@ -97,7 +97,7 @@
                         <!-- Card -->
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title"><img src="..images/MSU-IIT-Icon.png" alt="MSU IIT Logo" width="20px" height="20px">Mindanao State University - Iligan Institute of Technology</div> 
+                                <div class="card-title"><img src="images/MSU-IIT-Icon.png" alt="MSU IIT Logo" width="20px" height="20px">Mindanao State University - Iligan Institute of Technology</div> 
                                 <div class="card-text">The Mindanao State University – Iligan Institute of Technology, commonly referred to as, is a public coeducational institution of higher learning and research university located in Iligan City, Philippines, charted in 1968 by Republic Act 5363 and integrated as the first autonomous unit of the Mindanao State University System in 1975.</div>
                             </div>
                         </div> <!-- end of card -->
@@ -106,7 +106,7 @@
                         <!-- Card -->
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title"><img src="..images/NEMSU-Icon.png" alt="MSU IIT Logo" width="20px" height="20px">North East Mindanao State Universtiy - Lianga Campus</div> 
+                                <div class="card-title"><img src="images/NEMSU-Icon.png" alt="MSU IIT Logo" width="20px" height="20px">North East Mindanao State Universtiy - Lianga Campus</div> 
                                 <div class="card-text">NEMSU-Lianga is the Campus that specialized in Fisheries and Marine Sciences. In September 2009, it was identified by CHED as the National University/College of Fisheries (NUCAF) in CARAGA Region under the National Agriculture/Fisheries Education System (NAFES) project with a grant of P1M per year in 5 years. The campus has a notable Research Culture especially in Coastal Resource Management. It has experts in Corals, Seaweeds, Seagrass, Fin Fishes, Holothurias and Mangroves.</div>
                             </div>
                         </div> <!-- end of card -->
@@ -191,7 +191,7 @@
                                 </div>
                             </li>
                         </ul> 
-                    </div> 
+                    </div> <!-- end of col -->
                     <div class="col-lg-6">
                         <ul class="list-unstyled second">
                             <li class="d-flex">
@@ -447,7 +447,7 @@
                             <img class="img-fluid" src="images/project-1.png" alt="alternative">
                             <h3>NEMSU-SMS Blast System</h3>
                             <a class="project-link" href="https://along4short.github.io/SMSBlast-NEMSU/">along4short.github.io/SMSBlast-NEMSU/</a>
-                            <p>SMS BLAST NEMSU is an ongoing web application project initiated by Junel M. Maglunsod <br><br>Posting class announcements through communication applications like Facebook Messenger might not be helpful at it seems because of the fact that some students might not be added to specific groupchats and some students do not have the fortune to have cellular data all the time. SMS Blast is an application designed to be used by course instructors and help students especially new and transferee students be informed from class announcements via SMS. <br> <br>Information will be updated from time to time while I am working on this project.</p>
+                            <p>SMS BLAST NEMSU is an ongoing web application project initiated by Junel M. Maglunsod <br><br>Posting class announcements through communication applications like Facebook Messengger might not be helpful at it seems because of the fact that some students might not be added to specific groupchats and some students do not have the fortune to have cellular data all the time. SMS Blast is an application designed to be used by course instructors and help students especially new and transferee students be informed from class announcements via SMS. <br> <br>Information will be updated from time to time while I am working on this project.</p>
                             <div class="tag-container p-small">
                                 <span class="tag">HTML/CSS</span> <span class="tag">BOOTSTRAP</span> <span class="tag">JS</span> <span class="tag">PYTHON</span> <span class="tag">SQL</span>
                             </div>
