--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                     <div class="col-lg-12">
                         
                         <!-- Get Quote Form -->
-                        <form>
+                        <form action="https://formsubmit.co/junelmaglunsod0256@gmail.com" method="POST">
                             <div class="mb-4 form-floating">
                                 <input type="text" class="form-control" id="floatingInput1" placeholder="Name">
                                 <label for="floatingInput1">Name</label>
