--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                             <img class="img-fluid" src="images/project-1.png" alt="alternative">
                             <h3>NEMSU-SMS Blast System</h3>
                             <a class="project-link" href="https://along4short.github.io/SMSBlast-NEMSU/">along4short.github.io/SMSBlast-NEMSU/</a>
-                            <p>SMS BLAST NEMSU is an ongoing web application project initiated by Junel M. Maglunsod <br><br>Posting class announcements through communication applications like Facebook Messenger might not be helpful at is seems because of the fact that some students might not be added to specific groupchats and some students do not have the fortune to have cellular data all the time. SMS Blast is an application designed to be used by course instructors to help students especially new and transferee students be informed from class announcements via SMS. <br> <br>Updates about the project will be posted in this repository from time to time.</p>
+                            <p>SMS BLAST NEMSU is an ongoing web application project initiated by Junel M. Maglunsod <br><br>Posting class announcements through communication applications like Facebook Messenger might not be helpful as it seems because of the fact that some students might not be added to specific groupchats and some students do not have the fortune to have cellular data all the time. SMS Blast is an application designed to be used by course instructors to help students especially new and transferee students be informed from class announcements via SMS. <br> <br>Information about the application will be updated from time to time while working on the project.</p>
                             <div class="tag-container p-small">
                                 <span class="tag">HTML/CSS</span> <span class="tag">BOOTSTRAP</span> <span class="tag">JS</span> <span class="tag">PYTHON</span> <span class="tag">SQL</span>
                             </div>
@@ -523,7 +523,7 @@
                         <!-- Get Quote Form -->
                         <form action="https://formsubmit.co/junelmaglunsod0256@gmail.com" method="POST">
                             <div class="mb-4 form-floating">
-                                <input type="text" class="form-control" id="floatingInput1" placeholder="Name">
+                                <input type="text" class="form-control" id="floatingInput1" name="Name" placeholder="Full Name">
                                 <label for="floatingInput1">Name</label>
                             </div>
                             <div class="mb-4 form-floating">
@@ -539,7 +539,7 @@
                                 </select>
                             </div>
                             <div class="mb-4 form-floating">
-                                <textarea class="form-control" id="floatingTextarea1" placeholder="Your message here" rows="8"></textarea>
+                                <textarea name="Message" class="form-control" id="floatingTextarea1" placeholder="Your message here" rows="8"></textarea>
                                 <label for="floatingTextarea1">Details</label>
                             </div>
                             <div class="mb-4 form-check">
