--- a/index.html
+++ b/index.html
@@ -527,11 +527,11 @@
                                 <label for="floatingInput1">Name</label>
                             </div>
                             <div class="mb-4 form-floating">
-                                <input type="email" class="form-control" id="floatingInput2" placeholder="name@example.com">
+                                <input name="email" type="email" class="form-control" id="floatingInput2" placeholder="name@example.com">
                                 <label for="floatingInput2">Email</label>
                             </div>
                             <div class="mb-4 input-group">
-                                <select class="form-select" id="inputGroupSelect1">
+                                <select name="container" class="form-select" id="inputGroupSelect1">
                                     <option selected>Project type</option>
                                     <option value="Company Website">Data Analysis</option>
                                     <option value="Landing Page">Web Development</option>
@@ -539,7 +539,7 @@
                                 </select>
                             </div>
                             <div class="mb-4 form-floating">
-                                <textarea name="Message" class="form-control" id="floatingTextarea1" placeholder="Your message here" rows="8"></textarea>
+                                <textarea name="Message" class="form-control" id="floatingTextarea1" placeholder="Message" rows="8"></textarea>
                                 <label for="floatingTextarea1">Details</label>
                             </div>
                             <div class="mb-4 form-check">
