--- a/index.html
+++ b/index.html
@@ -527,11 +527,11 @@
                                 <label for="floatingInput1">Name</label>
                             </div>
                             <div class="mb-4 form-floating">
-                                <input name="email" type="email" class="form-control" id="floatingInput2" placeholder="name@example.com">
+                                <input type="email" name="Email" class="form-control" id="floatingInput2" placeholder="name@example.com">
                                 <label for="floatingInput2">Email</label>
                             </div>
                             <div class="mb-4 input-group">
-                                <select name="container" class="form-select" id="inputGroupSelect1">
+                                <select name="ProjectType" class="form-select" id="inputGroupSelect1">
                                     <option selected>Project type</option>
                                     <option value="Company Website">Data Analysis</option>
                                     <option value="Landing Page">Web Development</option>
